# PyMISES

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: aero-expert-guide.docx  aero-expert-guide.txt  implementation-plan.docx  implementation-plan.txt  implmentation_limitations.md  pymises_research.md  read_status.py  status.txt  status_clean.txt  status_copy.txt  updated-status.md
docs/original_papers/: misesUserGuide.md
docs/other/: aero-expert-guide.md  implementation-plan.md
examples/direct/: airfoil-direct-analysis-updated.py  airfoil-direct-analysis.py  cascade-direct-analysis-updated.py  cascade-direct-analysis.py  panel_method_direct.py
examples/inverse/: airfoil-inverse-design-updated.py  airfoil-inverse-design.py
examples/optimization/: airfoil-optimization.py  modal-design-optimization.py  simple_genetic_optimization.py
examples/validation/: airfoil-validation.py  fixed_naca0012_validation.py  grid_visualization.py  improved_naca0012_validation.py  naca0012_validation.py  rae2822_case6-updated.py  rae2822_case6.py  simple_naca0012_validation.py  simple_panel_method.py  transonic_airfoil_validation.py  vki_turbine_cascade.py
examples/validation/data/: naca0012_m080_cp.csv  naca0012_polar.csv  naca0012_pressure.csv  rae2822_case9_cp.csv  vki_turbine_pressure.csv  vki_turbine_wake.csv
pymises/: __init__.py
pymises/boundary_conditions/: README.md  __init__.py  farfield.py  inverse.py  periodicity.py  wall.py
pymises/core/: README.md  __init__.py  boundary_layer.py  coupling.py  euler.py  euler_flux.py  euler_jacobian.py  geometry.py  grid.py  newton.py
pymises/numerics/: README.md  __init__.py  jacobian.py  linear_solver.py
pymises/physics/: README.md  __init__.py  dissipation.py  dissipation_improved.py  laminar.py  thermo.py  transition.py  turbulent.py
pymises/postprocessing/: README.md  __init__.py  export.py  performance.py  visualize.py
pymises/ui/: __init__.py  cli_runner.py  streamlit_app.py
pymises/utils/: README.md  __init__.py  config.py  logger.py  validation.py
tests/: README.md  __init__.py  conftest.py  helpers.py
tests/boundary_conditions/: __init__.py  test_farfield.py  test_wall.py
tests/core/: __init__.py  test_boundary_layer.py  test_coupling.py  test_euler.py  test_grid.py
tests/integration/: __init__.py  test_airfoil_analysis.py  test_cascade_analysis.py  test_inverse_design.py  test_validation.py
tests/numerics/: __init__.py  test_jacobian.py  test_newton.py
tests/physics/: __init__.py  test_transition.py  test_turbulent.py
